...
                Container(
                  padding: EdgeInsets.fromLTRB(5.0, 0.0, 5.0, 0.0),
                  child: RaisedButton(
                    key: Key('go_to_auth_btn'),
                    color: Theme.of(context).primaryColor,
                    child: Text(
                      'Sign out',
                      style: TextStyle(color: Colors.white),
                    ),
                    onPressed: () {
                      Navigator.pushReplacementNamed(context, '/sign_in');
                    },
                  ),
...
                SizedBox(
                  height: 5.0,
                ),
                Container(
                  child: Center(
                    child: Text(
                      'Dangerous Zone',
                      key: Key('settings_screen_dangerous_zone_warning'),
                      style: TextStyle(color: Colors.redAccent),
                    ),
                  ),
                ),
                Divider(
...
